Issue390: Update dark mode contrast batch 2 (#414)
* first round of dark changes

* add styles for dark mode 2nd batch

* add footnote style

* update footnote and color contrast pages

* update success alert on dark

--- a/src/components/content-display/markdown-content/markdown-content.scss
+++ b/src/components/content-display/markdown-content/markdown-content.scss
@@ -91,10 +91,16 @@
   }
 
   img {
-    width: -webkit-fill-available;
+    height: auto;
     object-fit: contain;
     max-width: 100%;
-    height: auto;
+    width: -webkit-fill-available;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .img-prefers-dark img {
+        filter: var(--img-svgs);
+      }
   }
 
   @media (max-width: 768px) {
