--- a/src/styles/md-styles/_example-alerts.scss
+++ b/src/styles/md-styles/_example-alerts.scss
@@ -38,12 +38,22 @@ example,
           width: 1.25rem;
           height: auto;
           margin-right: .5rem;
+
+          @media (prefers-color-scheme: dark) {
+            filter: invert(100%);
+          }          
         }
       }
 
       &.success {
         background: var(--color-success);
         color: var(--color-text-on-primary);
+
+          @media (prefers-color-scheme: dark) {
+            background: var(--color-on-success-container);
+            color: var(--color-text-primary);
+
+          }        
 
           &::before {
             content:'';
@@ -52,6 +62,10 @@ example,
             width: 1.25rem;
             height: auto;
             margin-right: .5rem;
+
+            @media (prefers-color-scheme: dark) {
+              filter: brightness(0) saturate(100%) invert(16%) sepia(82%) saturate(5002%) hue-rotate(141deg) brightness(95%) contrast(101%);
+            }
         }
       }
   }
